Fix search overlay z-index
Resolve conflict with leaflet map on campuses pages

--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,7 @@
     background-position: center;
     opacity: 0.9;
 }
+
+.search-overlay {
+	z-index: 1000;
+}
